--- a/package.json
+++ b/package.json
@@ -159,9 +159,14 @@
     "env": {
       "production": {
         "plugins": [
-          ["react-remove-properties", {
-            "properties": ["data-testid"]
-          }]
+          [
+            "react-remove-properties",
+            {
+              "properties": [
+                "data-testid"
+              ]
+            }
+          ]
         ]
       }
     },
